3D View Editor Header > Select > Grouped > Keying Sets broken? #40801

Closed
opened 2014-06-25 12:52:33 +02:00 by Terry Wallwork · 5 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I am using Blender GIT Rev 2014-06-25-19-02-49-9273317 on a Fedora 20 Box 64Bit
with an Intel 3000 HD GFX card.

I noticed that the [3D View Editor Header > Select > Grouped > Keying Sets] doesn't seem to work
as described in the Blender Wiki (or at all as far as I can tell):

  
  http://wiki.blender.org/index.php/Doc:2.6/Manual/Modeling/Objects/Selecting
  

I have attached a test Blender file which has 2 cubes in it both having their location and rotation
values animated and recorded into a LocRot Keying set. Over the course of 50 frames their are
animated. Selecting CubeA only and using [3D View Editor Header > Select > Grouped > Keying Sets]
doesn't end up selecting CubeB. Even though they were both animated at the same time with the same
Keying Set (LocRot) active at the same time.

I remember posting a similar bug about animating non-object based keying sets and Joshua said that
wasn't supported so I assumed I was using it wrong. But this bug seem to affect even basic object
based animations. So I am reposting this one as it seems to be different. And as far as I can make
out this should work.

I have attached my system-info, a test Blend file I was using and a video showing the issue
I was having.

system-info.txt

3DViewEditorSelectGroupedKeyingSetsBug_.blend

3DViewEditorSelectGroupedKeyingSets.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev 2014-06-25-19-02-49-9273317 on a Fedora 20 Box 64Bit with an Intel 3000 HD GFX card. I noticed that the [3D View Editor Header > Select > Grouped > Keying Sets] doesn't seem to work as described in the Blender Wiki (or at all as far as I can tell): ``` http://wiki.blender.org/index.php/Doc:2.6/Manual/Modeling/Objects/Selecting ``` I have attached a test Blender file which has 2 cubes in it both having their location and rotation values animated and recorded into a LocRot Keying set. Over the course of 50 frames their are animated. Selecting CubeA only and using [3D View Editor Header > Select > Grouped > Keying Sets] doesn't end up selecting CubeB. Even though they were both animated at the same time with the same Keying Set (LocRot) active at the same time. I remember posting a similar bug about animating non-object based keying sets and Joshua said that wasn't supported so I assumed I was using it wrong. But this bug seem to affect even basic object based animations. So I am reposting this one as it seems to be different. And as far as I can make out this should work. I have attached my system-info, a test Blend file I was using and a video showing the issue I was having. [system-info.txt](https://archive.blender.org/developer/F95526/system-info.txt) [3DViewEditorSelectGroupedKeyingSetsBug_.blend](https://archive.blender.org/developer/F95527/3DViewEditorSelectGroupedKeyingSetsBug_.blend) [3DViewEditorSelectGroupedKeyingSets.webm](https://archive.blender.org/developer/F95528/3DViewEditorSelectGroupedKeyingSets.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Joshua Leung self-assigned this 2014-06-26 03:09:01 +02:00

This issue was referenced by 11e0dddf91

This issue was referenced by 11e0dddf91f76065a6dd782163eb3b75745a6b2e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 11e0dddf91.

Closed by commit 11e0dddf91.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40801
No description provided.